<resources>
    <string name="app_name">FitoFan</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="host">http://api.fitofan.com</string>

    <!--facebook-->
    <string name="facebook_app_id" translatable="false">188446971953265</string>
    <string name="fb_login_protocol_scheme">fb188446971953265</string>

    <!--name tab-->
    <string name="tab_wall">Wall</string>
    <string name="tab_participants">Rating</string>
    <string name="tab_my_plan">My Plans</string>

    <string name="forgot_pass">Forgot password?</string>
    <string name="sing_in">Sing in</string>
    <string name="year">2018</string>
    <string name="inc_andrii">Andrii Luzin inc.</string>
    <string name="registration">Registration</string>
    <string name="Email">Email</string>
    <string name="password">Password</string>
    <string name="sing_out">Sing out</string>
    <string name="exit">Exit</string>
    <string name="forgot_password">Password recovery</string>
    <string name="my_profile">My Profile</string>
    <string name="training">Training</string>
    <string name="share">Share</string>
    <string name="publish">Publish</string>
    <string name="add_training">Add Training</string>
    <string name="like">Like</string>
    <string name="search">Search</string>
    <string name="send_plan">Send plan</string>
    <string name="create_plan">Create a training plan</string>
    <string name="training_class">Training name</string>
    <string name="class_description">Add a workout class for example: \"running\", \"strength training\", \"press training\", etc.</string>
    <string name="add_image_file">Add image plan</string>
    <string name="description_description_plan">Add a description for the workout class.\nDescribes the delivery of a goal and a task when performing this type of training.</string>
    <string name="description_description_exercise">Add a description of the correctness class, the correctness and the peculiarity of its execution.</string>
    <string name="add_audio_file">Add audio file</string>
    <string name="training_description">Description</string>
    <string name="save">Save</string>
    <string name="exercise">Exercise</string>
    <string name="number_approaches">Number of approaches</string>
    <string name="duration_exercise">Duration/Weight/Distance</string>
    <string name="time_between_exercise">Rest</string>
    <string name="relax_time">Relax Time</string>
    <string name="add_exercise">Add an exercise</string>
    <string name="save_all_plan">Save workout</string>
    <string name="training_plan">Training plan</string>
    <string name="close">Close</string>
    <string name="hide">Hide</string>
    <string name="back">back</string>
    <string name="next">next</string>
    <string name="number_repetitions_description">Add the number of repetitions to the exercise, for example: \"5\", \"15\", \"100\", etc.\nDepending on the class of training, the number of exercises can be equal to \"1\".</string>
    <string name="exercise_name_description">Add an exercise for example: \"jogging\", \"side impact on the pear\", \"push-ups from the floor\", etc.</string>
    <string name="time_exercise_description">Add time to the controls, for example: \"12:00\", \"0:30\", \"120:00\" etc.\nDepending on the class of training, the exercise time may be equal to \"0\".</string>
    <string name="time_between_exercise_description">Add a rest time between the exercises, for example: \"3:00\", \"0:45\", \"2:10\", etc.\nDepending on the class of training, the rest time can be equaled \"0\".</string>
    <string name="relax_time_description">Add a rest time for the restoration. This kind of time is established between different types of exercises, for example: \"3:00\", \"0:45\", \"2:10\", etc.\n Depending on the terrain class, the recovery time can be \"0\".</string>
    <string name="relax">Relax</string>
    <string name="start_training">Start training</string>
    <string name="remove">Remove</string>
    <string name="deleted">Edit</string>
    <string name="removed">Removed</string>
    <string name="select_action">Select action</string>
    <string name="first_exercise">This is the first exercise</string>
    <string name="last_exercise">This is the last exercise</string>
    <string name="saved">Saved</string>
    <string name="save_question">Save?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="first_name">Name</string>
    <string name="last_name">Last name</string>
    <string name="password_again">Password again</string>
    <string name="del_exercise">Delete exercise</string>
    <string name="subscribe">Subscribe</string>
    <string name="unsubscribe">Unsubscribe</string>
    <string name="rest">Rest</string>
    <string name="user_profile">User profile</string>
    <string name="show_all">Show All</string>
    <string name="prepare_time">Preparation time</string>
    <string name="my_place">My place</string>
    <string name="incorrect_email_or_pass">Wrong e-mail or password</string>
    <string name="all_time_plan">Total time</string>
    <string name="distance">Distance</string>
    <string name="weight">Weight</string>
    <string name="number_of_times">Number of times</string>
    <string name="tab_subscribers">Subscribers</string>
    <string name="tab_subscriptions">Subscriptions</string>
    <string name="comments">Comments</string>
    <string name="add_comment">Add \ncomment…</string>
    <string name="cancel">Cancel</string>
    <string name="new_pass">New password</string>
    <string name="new_pass_again">New password recovery</string>
    <string name="current_password">Current password</string>
    <string name="done">Done</string>
    <string name="about_you">About you</string>
    <string name="change">change</string>
    <string name="location">Location</string>
    <string name="time">Time</string>
    <string name="count">Count</string>
    <string name="exercise_name">Exercises name</string>
    <string name="add_description">Add description</string>
    <string name="edited">Changed</string>
    <string name="created_plans">Created plans</string>
    <string name="edit_music">Edit music</string>
    <string name="remove_from_wall">Remove from the wall</string>
    <string name="remove_from_all">Delete for all</string>
    <string name="removed_from_wall">Removed from the wall</string>
    <string name="saved_plans">Saved plans</string>
    <string name="fans">Fans</string>
    <string name="plans">Plans</string>
    <string name="connection_error">Connection error…</string>
    <string name="sure">Are you sure?</string>
    <string name="obligatory_field">Obligatory field</string>
    <string name="not_valid_email">Email is not valid\nExample:example@gmail.com</string>
    <string name="pass_not_match">Passwords do not match</string>
    <string name="exemple_pass">The password must contain at least 8 characters, numbers, upper and lower case letters</string>
    <string name="rate_app">Rate</string>
    <string name="training_inventory">Inventory</string>
    <string name="inventory_plan">The name of the inventory that is needed for training. For example: \"a skipping rope\", \"dumbbells\", etc.</string>
    <string name="no_entered_name">No name entered</string>
    <string name="no_entered_description">no description entered</string>
    <string name="no_put_image">not inserted picture</string>
    <string name="failed_to_save">Failed to save</string>
    <string name="difficulty_level">Difficulty level</string>
    <string name="close_constructor">Close plan constructor?</string>
    <string name="select_video">Select Video</string>

</resources>
