<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background_fragment"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/bt_add_exercise"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="15dp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="35dp"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:background="@drawable/ripple_bg_blue_button"
            android:text="@string/add_exercise"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/bt_del_exercise"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="15dp"
            android:layout_marginEnd="35dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:background="@drawable/ripple_bg_blue_button"
            android:text="@string/del_exercise"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            android:textStyle="bold"/>
    </LinearLayout>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginEnd="35dp"
        android:layout_marginStart="35dp"
        app:cardCornerRadius="6dp">

        <ImageView
            android:id="@+id/iv_total_time"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/shape_special"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="6dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/all_time_plan"
                android:textColor="@color/transparent_text_white"
                android:textSize="12sp"/>

            <TextView
                android:id="@+id/tv_total_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="15:30"
                android:textColor="@android:color/white"
                android:textSize="32sp"
                android:textStyle="bold"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/bt_save_plan"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginBottom="15dp"
        android:layout_marginEnd="35dp"
        android:layout_marginStart="35dp"
        android:background="@drawable/ripple_bg_special_button"
        android:text="@string/save_all_plan"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        android:textStyle="bold"/>

</LinearLayout>